--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
   },
   "homepage": "https://github.com/lego-js/mobile-nav#readme",
   "dependencies": {
-    "lego-toggle": "^2.0.0"
-  },
-  "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "lego-toggle": "^2.0.0"
+  },
+  "devDependencies": {
     "glob": "^7.0.3",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8",
+    "node-sass": "^3.8.0",
     "vinyl-fs": "^2.4.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0",
