--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "lego-mobile-nav",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Infinitely nestable semantic navigation for smaller screens.",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "module": "src/index.js",
   "style": "src/mobile-nav.scss",
   "scripts": {
     "build": "node build.js",
@@ -21,9 +22,7 @@
   },
   "homepage": "https://github.com/lego-js/mobile-nav#readme",
   "dependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
+    "lego-data": "^1.0.8",
     "lego-toggle": "^2.0.0"
   },
   "devDependencies": {
@@ -34,21 +33,8 @@
     "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8",
     "node-sass": "^3.8.0",
-    "vinyl-fs": "^2.4.3",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0",
+    "rollup": "^0.55.3",
+    "rollup-plugin-buble": "^0.18.0",
     "yargs": "^4.6.0"
-  },
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015"
-          ]
-        }
-      ]
-    ]
   }
 }
